--- a/appspec.template.yaml
+++ b/appspec.template.yaml
@@ -1,7 +1,7 @@
 version: 0.0
 Resources:
   - test: # Replace "MyFunction" with the name of your Lambda function
-      Type: aws-cn::Lambda::http
+      Type: AWS::Lambda::Function
       Properties:
         Name: "http" # Specify the name of your Lambda function
         Alias: "beta" # Specify the alias for your Lambda function
